--- a/pseudoelementos.css
+++ b/pseudoelementos.css
@@ -35,5 +35,29 @@ body {
   display: block;
   width: 100%;
   height: 3px;
-  background-color: black;
+  background-color: red;
+}
+
+ul {
+  counter-reset: adso;
+}
+
+li {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 10px;
+}
+
+li::before {
+  content: counter(adso);
+  counter-increment: adso;
+  background-color: #c2c2;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  color: #858585;
+  text-align: center;
+  line-height: 30px;
+  border-radius: 50px;
+  margin-right: 5px;
 }
